--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,28 +1,28 @@
-.App {
-  text-align: center;
+.container {
+    display: flex;
+    flex-direction: row;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.section-container {
+    border: 1px solid black;
+    margin-left: 25px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.header {
+    color: white;
+    text-align: center;
+    background-color: #8E6E95;
 }
 
-.App-title {
-  font-size: 1.5em;
+.purple {
+    background-color: #8E6E95;
 }
-
-.App-intro {
-  font-size: large;
+.teel {
+    background-color: #39A59C;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.darkblue {
+    background-color: #344759;
+}
+.orange {
+    background-color: #E8741E;
 }
